--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,11 @@
 #Removes file extentions from URL
 RewriteEngine On
 RewriteCond %{https://digikart.in/index.html} !-f
+RewriteCond %{https://digikart.in/about.html} !-f
+RewriteCond %{https://digikart.in/social-media-marketing.html} !-f
+RewriteCond %{https://digikart.in/seo.html} !-f
+RewriteCond %{https://digikart.in/content-marketing.html} !-f
+RewriteCond %{https://digikart.in/ppc.html} !-f
+RewriteCond %{https://digikart.in/email-marketing.html} !-f
 RewriteRule ^([^\.]+)$ $1.php [NC,L]
 RewriteRule ^([^\.]+)$ $1.html [NC,L]
